// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect.ts should escape items in menu 1`] = `

<div class="v-list-item__title">
  &lt;strong&gt;foo&lt;/strong&gt;
</div>

`;

exports[`VSelect.ts should only show items if they are in items 1`] = `

<div role="combobox"
     class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div class="v-select__selection v-select__selection--comma">
            foo
          </div>
          <input autocomplete="on"
                 readonly="readonly"
                 type="text"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.dropdown
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <span name="message-transition"
              tag="div"
              class="v-messages__wrapper"
        >
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect.ts should only show items if they are in items 2`] = `

<div role="combobox"
     class="v-input v-text-field v-select theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <input autocomplete="on"
                 readonly="readonly"
                 type="text"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.dropdown
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <span name="message-transition"
              tag="div"
              class="v-messages__wrapper"
        >
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect.ts should only show items if they are in items 3`] = `

<div role="combobox"
     class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div class="v-select__selection v-select__selection--comma">
            bar
          </div>
          <input autocomplete="on"
                 readonly="readonly"
                 type="text"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.dropdown
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <span name="message-transition"
              tag="div"
              class="v-messages__wrapper"
        >
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect.ts should only show items if they are in items 4`] = `

<div role="combobox"
     class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div class="v-select__selection v-select__selection--comma">
            foo,
          </div>
          <div class="v-select__selection v-select__selection--comma">
            bar
          </div>
          <input autocomplete="on"
                 readonly="readonly"
                 type="text"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.dropdown
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <span name="message-transition"
              tag="div"
              class="v-messages__wrapper"
        >
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect.ts should render v-select correctly when not using scope slot 1`] = `

<div role="combobox"
     class="v-input v-text-field v-select theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <input autocomplete="on"
                 readonly="readonly"
                 type="text"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.dropdown
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <span name="message-transition"
              tag="div"
              class="v-messages__wrapper"
        >
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect.ts should render v-select correctly when not using v-list-item in item scope slot 1`] = `

<div role="combobox"
     class="v-input v-text-field v-select theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <input autocomplete="on"
                 readonly="readonly"
                 type="text"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.dropdown
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <span name="message-transition"
              tag="div"
              class="v-messages__wrapper"
        >
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect.ts should render v-select correctly when using v-list-item in item scope slot 1`] = `

<div role="combobox"
     class="v-input v-text-field v-select theme--light"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <input autocomplete="on"
                 readonly="readonly"
                 type="text"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.dropdown
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <span name="message-transition"
              tag="div"
              class="v-messages__wrapper"
        >
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect.ts should use slotted no-data 1`] = `

<div role="list"
     class="v-list theme--light"
>
  <div aria-selected="false"
       role="listitem"
       tabindex="-1"
       class="v-list-item v-list-item--link theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
        foo
      </div>
    </div>
  </div>
</div>

`;
